completed but need to deal with overlapping issue

--- a/src/components/navBar/styles.scss
+++ b/src/components/navBar/styles.scss
@@ -14,12 +14,11 @@
         height: inherit;
         padding: 0px 20px;
         flex: 1;
-        
         &__logo{
             color: var(--blue-theme-main-color);
-            cursor:pointer;
-
+            cursor: pointer;
         }
+
         &__menu{
             display: flex;
             list-style: none;
@@ -27,58 +26,63 @@
 
             &__item{
                 line-height: 40px;
-                font-size: 1.6rem;
                 margin-right: 1.5rem;
+                font-size: 1.6rem;
 
                 &::after{
-                    content:'' ;
+                    content: '';
                     display: block;
                     height: 3px;
                     width: 0;
                     background: transparent;
-                    transition: 0.5s ease;
+                    transition: all 0.5s ease;
                 }
+
                 &:hover::after{
                     width: 100%;
                     background: var(--blue-theme-main-color);
                 }
+
                 &__links{
                     color: var(--blue-theme-main-color);
                     text-decoration: none;
                     padding: 0.5rem;
                 }
-
             }
         }
     }
 }
+
 .nav-icon{
     display: none;
 }
 
-@media only screen and  (max-width : 768px){
+@media only screen and (max-width : 768px){
     .navbar__container__menu{
         display: flex;
         flex-direction: column;
         justify-content: center;
         width: 100%;
-        border-top: 1px solid #fff;
         position: absolute;
         top: 80px;
         left: -110%;
         opacity: 1;
         transition: all 0.5s ease;
+        z-index: 999;
+
         &.active{
             background: #181818;
             left: 0px;
             opacity: 1;
         }
+
         &__item{
             border-bottom: 1px solid #282828;
             margin: 0px;
-            padding: 20px 0px;
+            padding: 20px 0px; 
         }
     }
+
     .nav-icon{
         display: block;
         cursor: pointer;
